--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,9 +2,9 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+// $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
-$line-height-base: 1.6;
+// $line-height-base: 1.6;
 
 // Colors
 $blue: #3490dc;
@@ -17,3 +17,11 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$magenta: #4e004e;
+
+$dropdown-border-radius: 0;
+
+$theme-colors: (
+	'primary': $magenta,
+	'purple': $purple,
+);
