--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,8 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.btn-default {
+	border: 1px solid $border-color;
+	background-color: $white;
+}
