--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -4,6 +4,7 @@ $body-bg: #f8fafc;
 // Typography
 // $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
+// $enable-responsive-font-sizes: true;
 // $line-height-base: 1.6;
 
 // Colors
@@ -27,3 +28,5 @@ $theme-colors: (
 );
 
 $enable-rounded: false;
+
+$input-focus-box-shadow: none;
