--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10789,3 +10789,10 @@ a.text-primary-dark:focus {
   height: calc(100% - 53.6px);
 }
 
+.post-content > img,
+.post-content > p > img,
+.post-content > div > img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
