--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -6,3 +6,10 @@
 .sidebar-nav {
 	height: calc(100% - 53.6px);
 }
+
+.post-content > img,
+.post-content > p > img,
+.post-content > div > img {
+	max-width: 100%;
+	max-height: 100%;
+}
