--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10789,10 +10789,42 @@ a.text-primary-dark:focus {
   height: calc(100% - 53.6px);
 }
 
+/** Post show page content */
+
 .post-content > img,
 .post-content > p > img,
 .post-content > div > img {
   max-width: 100%;
   max-height: 100%;
+}
+
+/** Notification alert */
+
+.notification-container {
+  position: fixed;
+  width: calc(100% - 60px);
+  bottom: 0;
+  right: 30px;
+  z-index: 99;
+}
+
+@media (min-width: 576px) {
+  .notification-container {
+    width: calc(100% - 60px);
+    top: 30px;
+    bottom: unset;
+  }
+}
+
+@media (min-width: 768px) {
+  .notification-container {
+    width: calc(50% - 60px);
+  }
+}
+
+@media (min-width: 992px) {
+  .notification-container {
+    width: calc(25% - 60px);
+  }
 }
 
