--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -7,9 +7,39 @@
 	height: calc(100% - 53.6px);
 }
 
+/** Post show page content */
 .post-content > img,
 .post-content > p > img,
 .post-content > div > img {
 	max-width: 100%;
 	max-height: 100%;
+}
+
+/** Notification alert */
+.notification-container {
+	position: fixed;
+	width: calc(100% - 60px);
+	bottom: 0;
+	right: 30px;
+	z-index: 99;
+}
+
+@include media-breakpoint-up(sm) {
+	.notification-container {
+		width: calc(100% - 60px);
+		top: 30px;
+		bottom: unset;
+	}
+}
+
+@include media-breakpoint-up(md) {
+	.notification-container {
+		width: calc(50% - 60px);
+	}
+}
+
+@include media-breakpoint-up(lg) {
+	.notification-container {
+		width: calc(25% - 60px);
+	}
 }
