--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -30,3 +30,6 @@ $theme-colors: (
 $enable-rounded: false;
 
 $input-focus-box-shadow: none;
+
+$dropdown-min-width: 12rem;
+$dropdown-item-padding-x: 1.25rem;
